package pa1.containment;

public class FaceMask extends Containment {

    public FaceMask(int pos) {
        this.name = "facemask";
        this.pos = pos;
    }
}
