@startuml
'https://plantuml.com/class-diagram

abstract class HealthAuthorityStaff{
leadership
medicine
experience
isReady

getBonusPoints()
developMedicationFacility()
buildFMaskFactory()
upgradeFMaskQuality()
banTravel()
developVaccine()
upgradeVaccine()
}

class ChiefExecutive{
getBonusPoints()
banTravel()
}
class HealthMinister{
getBonusPoints()
developMedicationFacility()
buildFMaskFactory()
}
class Epidemiologist{
getBonusPoints()
developVaccine()
upgradeVaccine()
upgradeFMaskQuality()
}
HealthAuthorityStaff <|-- ChiefExecutive
HealthAuthorityStaff <|-- HealthMinister
HealthAuthorityStaff <|-- Epidemiologist

abstract class Containment{
protection_level
medication_level
vaccination_level
incrementProtection_level()
incrementVaccination_level()
setMedication_level()
}
class FaceMask{
getProtection_level()
}
class Isolation{
getProtection_level()
}
class Treatment{
getMedication_level()
}
class Vaccination{
getVaccination_level()
}
Containment <|-- FaceMask
Containment <|-- Isolation
Containment <|-- Treatment
Containment <|-- Vaccination
@enduml